# EasyDelegate

./: .gitignore  CMakeLists.txt  ConstexprStructsImpl.hpp  EasyDelegate.hpp  EasyDelegateAnyCTImpl.hpp  EasyDelegateAnyImpl.hpp  EasyDelegateBinding.hpp  EasyDelegateGlobalTemplates.hpp  EasyDelegateImpl.hpp  EasyDelegateMapper.hpp  EasyDelegateMultiImpl.hpp  LICENSE  README.md  example.cpp  main.cpp
examples/: CompileTimeAnyExample.cpp  DelegateExample.cpp  MultiDelegateExample.cpp  RuntimeAnyDelegateExample.cpp  examples.h  linked_delegates.cpp  manual_using.cpp  multi_delegate.cpp
